MVP para Glosario

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/newspaper"
             android:title="Noticias" />
         <item
+            android:id="@+id/nav_cursos"
+            android:icon="@drawable/lead_pencil"
+            android:title="Cursos" />
+        <item
             android:id="@+id/nav_glosario"
             android:icon="@drawable/format_float_left"
             android:title="Glosario" />
